gcc/testsuite/rust/rustc/ui/typeck/while-loop-block-cond_dg.rs
fn main() {
    while {} {}
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

